# xian-vl

./: .gitignore  .gitmodules  AGENTS.md  README.md  build_whisper_test.sh  mage.sh  main.py  pyproject.toml  requirements-rocm.txt  requirements.txt  rewrite_app.py  rewrite_hotkeys.py  rewrite_workers.py  test_httpcore.py  test_httpcore2.py  test_httpcore3.py  test_httpcore4.py
.github/workflows/: ci.yml  codeql.yml  release.yml
apps/lore-client/: README.md  pyproject.toml
apps/lore-client/src/: test_scrape.py
apps/lore-client/src/lore/: __init__.py  cli.py  compiler.py  scraper.py  searcher.py
apps/luduan-client/: README.md  pyproject.toml
apps/luduan-client/src/luduan/: __init__.py  audio_engine.py  encoder.py  main.py  parser.py  translator.py
apps/mage-client/: README.md  manual_audio_probe.py  pyproject.toml  test_audio.py  test_env.py  test_gui.py  test_hud.py  test_raid_worker.py  test_telemetry.py  test_window_binder.py
apps/mage-client/src/mage/: __init__.py  app.py  familiar_conjure.py  familiar_recipe.py  lemond_manager.py  main.py  resources.py  settings_keys.py  telemetry.py  workers.py
apps/mage-client/src/mage/capture/: audio.py  hotkeys.py  mouse.py  screen.py
apps/mage-client/src/mage/ui/: __init__.py  chat_sidebar.py  command_osd.py  conjure_dialog.py  familiar_pet.py  grounding.py  how_to_say.py  hud.py  lens.py  notes_sidebar.py  overlay_base.py  raid_window.py  result_bubble.py  theme.py  wizard_pet.py
apps/mage-client/src/mage/utils/: env.py  window_binder.py
apps/masha-extension/: README.md  manifest.json  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  wxt.config.ts
apps/masha-extension/background/: service-worker.js
apps/masha-extension/content/: content.js
apps/masha-extension/docs/: FALKON.md
apps/masha-extension/popup/: popup.css  popup.html  popup.js
apps/masha-extension/src/assets/: tailwind.css
apps/masha-extension/src/core/: constants.ts  prompt.ts  translator.ts
apps/masha-extension/src/entrypoints/: background.ts  content.ts
apps/masha-extension/src/entrypoints/popup/: App.tsx  index.html  main.tsx
apps/masha-extension/src/platform/: bridge.ts
apps/masha-extension/src/utils/: config.ts  lemonadeUrl.ts
apps/nate/: README.md  build.gradle.kts  settings.gradle.kts
apps/nate/app/: build.gradle.kts
apps/nate/app/src/main/: AndroidManifest.xml
apps/nate/app/src/main/java/com/xian/nate/: MainActivity.kt
apps/nate/app/src/main/java/com/xian/nate/api/: LemonadeService.kt  NateOmniRouter.kt  ServiceFactory.kt
apps/nate/app/src/main/java/com/xian/nate/ocr/: LemonadeOCR.kt  MLKitOCR.kt  OCREngine.kt  PaddleOCR.kt  VisionTranslator.kt
apps/nate/app/src/main/java/com/xian/nate/render/: Inpainter.kt
apps/nate/app/src/main/java/com/xian/nate/translation/: TranslationManager.kt
apps/nate/app/src/main/java/com/xian/nate/ui/: OCRScannerScreen.kt  TranslateScreen.kt
apps/nate/app/src/main/java/com/xian/nate/util/: Images.kt  Settings.kt
apps/nate/app/src/main/python/: ocr_engine.py  translation_engine.py
apps/nate/app/src/main/res/values/: strings.xml
apps/nate/app/src/main/res/xml/: file_paths.xml  network_security_config.xml
docs/: AI_ARCHITECTURE.md  CONJURE.md  PERFORMANCE.md  QA_CHECKLIST.md  README.ar.md  README.es.md  README.hi.md  README.ru.md  README.vi.md  README.zh.md  ROADMAP.md  security.md  window-focus-plan.md
familiar/: README.md
scripts/: AppRun  add_gpl_headers.py  build_mage.py  generate_translations.py  mage.desktop  sync_jx3box_data.py
xian/: __init__.py  app.py  assistant_ui.py  command_osd.py  constants.py  context_manager.py  dictionary.py  hotkeys.py  lens_ui.py  main_window.py  models.py  overlay_ui.py  qwen_pipeline.py  qwen_translation_workers.py  region_selector.py  result_bubble.py  screen_capture.py  translation_db.py  workers.py
xian/knowledge/: jx3_db.py  jx3_translator.py  localization.json  mcp_server.py  tools.py
