[project]
name = "xian-ecosystem"
version = "2.0.0"
description = "Hub-and-Spoke AI Translation Ecosystem — powered by Lemonade"
readme = "README.md"
requires-python = ">=3.10, <3.14"
license = {text = "GPL-3.0-or-later"}

[tool.uv.workspace]
members = [
    "apps/mage-client",
    "apps/luduan-client",
    "packages/xian-vl",
    "packages/shared-types",
]
