[project]
name = "xian-ecosystem"
version = "2.0.0"
description = "Hub-and-Spoke AI Translation Ecosystem — powered by Lemonade"
readme = "README.md"
requires-python = ">=3.10, <3.14"
license = {text = "GPL-3.0-or-later"}

[tool.uv.workspace]
members = [
    "apps/mage-client",
    "apps/luduan-client",
    "apps/lore-client",
    "packages/xian-vl",
    "packages/shared-types",
    "packages/localize",
]

[tool.pytest.ini_options]
# Explicit paths so collection is deterministic and doesn't import stray
# script-style "test_*.py" files (e.g. lore-client's test_scrape.py).
testpaths = [
    "packages/xian-vl/tests",
    "apps/mage-client",
]
addopts = "-q --import-mode=importlib"
asyncio_mode = "auto"
# The ad-hoc client tests live next to source as test_*.py; only pick those up,
# not the runnable scripts.
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["lemonade", "familiar", "*.ipynb"]

[tool.ruff.lint]
# Start conservative: pyflakes (F) catches real bugs (undefined names, unused
# imports, f-strings without placeholders). Widen the rule set over time.
select = ["F"]

