[project]
name = "lore-client"
version = "0.1.0"
description = "LORE — Interactive CLI tool for researching Chinese entities and compiling localized English Markdown wiki"
requires-python = ">=3.10, <3.14"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "playwright>=1.40.0",
    "httpx>=0.25.0",
    "readability-lxml>=0.8.1",
    "beautifulsoup4>=4.12.0",
    "shared-types",
    "openai",
    "xian-vl",
    "pyyaml>=6.0",
]

[project.scripts]
lore = "lore.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lore"]

[tool.uv.sources]
shared-types = { workspace = true }
xian-vl = { workspace = true }
