[project]
name = "mage-client"
version = "2.0.0"
description = "MAGE — Gaming HUD for real-time screen translation"
requires-python = ">=3.10, <3.14"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "PyQt6>=6.6",
    "Pillow>=10.0",
    "xian-vl",
    "shared-types",
    "evdev>=1.7.0; sys_platform == 'linux'",
    "pynput>=1.7.6; sys_platform != 'linux'",
]

[project.scripts]
mage = "mage.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mage"]

[tool.uv.sources]
xian-vl = { workspace = true }
shared-types = { workspace = true }
